src/test/deca/codegen/valid/provided/entier1.ass
	TSTO #3
	BOV pile_pleine
	ADDSP #3
; start main program
; Construction des tables des méthodes
; Construction de la table des méthodes de Object
	LOAD #null, R0
	STORE R0, 1(GB)
	LOAD code.Object.equals, R0
	STORE R0, 2(GB)
; Main program
; Beginning of main instructions:
	LOAD #1, R2
	STORE R2, 3(GB)
	LOAD 3(GB), R2
	LOAD R2, R1
	WINT
	WNL
	LOAD 3(GB), R2
	ADD #1, R2
	STORE R2, 3(GB)
	LOAD 3(GB), R2
	LOAD R2, R1
	WINT
	WNL
	HALT
; Classe Object
; ---------- Code de la méthode equals dans la classe Object (built in)
code.Object.equals:
	RTS
; Erreurs
pile_pleine:
	WSTR "Erreur : pile_pleine"
	WNL
	ERROR
; end main program
